@@ -1,6 +1,6 @@
-<printer id="printer/Oki-B6300">
-   <make>Oki</make>
-   <model>B6300</model>
+<printer id="printer/HP-LaserJet_P4014">
+   <make>HP</make>
+   <model>LaserJet P4014</model>
    <mechanism>
    <!--not "color"-->
       <laser/>
@@ -11,28 +11,25 @@
          </dpi>
       </resolution>
    </mechanism>
-   <url>http://www.okidata.com.sg/binaryData/20684/B6000Series.pdf</url>
+   <url>http://h10010.www1.hp.com/wwpc/us/en/en/WF06a/18972-18972-3328059-14638-236263-3558788.html</url>
    <lang>
       <postscript level="3" />
-      <pcl level="6"/>
-      <pjl />
+      <pcl level="6" />
+      <!--no pjl-->
       <!--no "text"-->
    </lang>
    <functionality>A</functionality>
-   <driver>Postscript</driver>
+   <driver>hplip</driver>
    <drivers>
      <driver>
-       <id>Postscript</id>
-     </driver>
-     <driver>
-       <id>pxlmono</id>
+       <id>hplip</id>
      </driver>
    </drivers>
    <comments>
       <en>
-      Throughput = 34
+      Throughput = 45
       
-      Foomatic entry made by PPDtoXML T/G 0.19 on 2008-06-26
+      Foomatic entry made by PPDtoXML T/G 0.21 on 2009-10-27
       </en>
    </comments>
 </printer>
