@@ -1,3 +1,10 @@
+2009-10-27  Dafydd Crosby <dafydd.crosby@gmail.com>
+	* printer/Oki-B6300.xml: Printer uses PJL, added pxlmono
+	driver
+
+	* printer/HP-LaserJet_P4014.xml,
+	  printer/HP-LaserJet_P4015.xml: New printer database entries
+
 2009-10-09  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* printer/Kyocera-CS-C2525E_KPDL.xml,
